Revision history for Perl extension Perl-MinimumVersion

        - 5.8 and 5.6 pragmas (Alexandr Ciornii)
        - fixed error in perlver/find (Alexandr Ciornii)
        - CPAN::Exception should not trigger dependency on 5.5 (Alexandr Ciornii)
        - added undocumented option 'explain' in perlver

1.19 Sun 14 Sep 2008
	- Updating PPI and several other dependencies to get a more
	  accurate parse on which to run the analysis.
	- Add a dependency on File::Find::Rule::Perl instead of using
	  a deplicate (worse) copy of the code for it.
	- If perlver is run in a CPAN-style distribution don't parse
	  blib or _build directories (but DO parse inc)

1.18 Sat 23 Aug 2008
	- Moving bin/perlver to more correct script/perlver
	- Adding test for localising soft references (BDFOY)
	- Updating to Module::Install 0.77

0.16 Sat 10 May 2008
	- Adding rules for mro.pm and feature.pm (Alexandr Ciornii)
	- Adding rules for 5.10.0 operators and magic variables (Adam Kennedy)
	- Internal fixes for 5.10.0 (read: 5.010) support (Ricardo Signes)
	- Add version_analysis for complete (slow) analysis (Ricardo Signes)
	- Adding a 5.005_03 dependency on qr// (Adam Kennedy)

0.15 Tue 17 Jul 2007
	- No functional changes
	- Updating List::Util dependency to 1.19 to resolve Win32 memory leak
	- Adding rule for "use base 'Exporter';" (some old versions don't export import)
	- Correcting the behaviour of minimum_syntax_version when provided a filter

0.14 Tue  6 Mar 2007
	- Adding support for checking the 5.8 dep "use constant { ... };"
	- Moderning the tests a little
	- Push the version.pm dependency again to 0.70 to avoid
	  a number of edge case and legacy API issues that bit us earlier.
	- Upgraded to Module::Install 0.65_01

0.13 Sat 22 Apr 2006
	- No functional changes
	- Moved over from SourceForge CVS to new collaborative SVN repository
	- Upgraded to Module::Install 0.62

0.12 Fri Dec 30 2005
	- Removed some Perl 5.8isms and coded one back in as a rule :)